+ Rest запрос isAdmin